[project]
name = "claude-top"
version = "0.1.3"
description = "CLI + TUI for viewing Claude Code usage statistics from local session files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Xpo Development", email = "dev@xpo.dev"}
]
keywords = ["claude", "anthropic", "usage", "cli", "tui", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "keyring>=25.7.0",
]

[project.urls]
Homepage = "https://github.com/xpodev/claude-top"
Repository = "https://github.com/xpodev/claude-top"
Issues = "https://github.com/xpodev/claude-top/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
claude-top = "claude_top.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_top"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long

[tool.black]
line-length = 100
target-version = ["py39"]
